src/test/ui/issues/issue-23080-2.stderr
error[E0380]: auto traits cannot have methods or associated items
  --> $DIR/issue-23080-2.rs:5:1
   |
LL | / unsafe auto trait Trait {
LL | |
LL | |     type Output;
LL | | }
   | |_^

error[E0275]: overflow evaluating the requirement `<() as Trait>::Output`
   |
   = note: required because of the requirements on the impl of `Trait` for `()`
   = note: required because of the requirements on the impl of `Trait` for `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0275, E0380.
For more information about an error, try `rustc --explain E0275`.
